--- a/styles/index.css
+++ b/styles/index.css
@@ -319,7 +319,7 @@ main {
     margin-top: 32px;
 }
 
-.news-card-reverse{
+.news-card-reverse {
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
@@ -370,4 +370,95 @@ main {
     font-size: 18px;
     font-weight: 600;
     border: none;
+}
+
+.donate {
+    margin-top: 80px;
+}
+
+.donate h1 {
+    color: rgb(14, 14, 14);
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    text-align: center;
+    margin: 24px 0px;
+}
+
+.donate p {
+    color: rgba(14, 14, 14, 0.7);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin: 0px 24px;
+}
+
+.donation-options {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 32px 0;
+}
+
+.donation-options div {
+    box-sizing: border-box;
+    border: 1px solid #0e0e0e26;
+    border-radius: 16px;
+    padding: 40px;
+}
+
+.donation-options div:hover {
+    background: #c6e4d6;
+}
+
+.donation-options h2 {
+    color: rgba(14, 14, 14, 0.8);
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+}
+
+.donations {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.custom-donation {
+    width: 80%;
+    padding: 15px;
+    font-size: 1rem;
+    border: none;
+    border-bottom: 1px solid #e6e5e5e1;
+    border-radius: 0;
+    margin-bottom: 20px;
+    outline: none;
+    transition: border 0.3s ease;
+    text-align: center;
+}
+
+.custom-donation:focus {
+    border-color: #76c893;
+}
+
+.donate input.placeholder {
+    text-align: center;
+}
+
+.donate .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 32px;
+}
+
+.donate button {
+    border: 1px solid rgba(14, 14, 14, 0.1);
+    border-radius: 8px;
+    padding: 17px 34px 17px 34px;
+    background: rgb(0, 106, 80);
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-weight: 600;
 }
